--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "url": ""
   },
   "dependencies": {
+    "commander": "~2.0.0",
     "bindings": "*",
-    "buffer-crc32": "~0.2.1"
+    "buffer-crc32": "~0.2.1",
+    "async": "~0.2.9"
   },
   "devDependencies": {
     "chai": "1.7.x",
     "mocha": "1.12.x"
-  }
+  },
+  "bin": [
+    "bin/zopfli",
+    "bin/zopflipng"
+  ],
+  "main": "zopfli.js",
+  "gypfile": true
 }
