--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "commander": "~2.0.0",
     "bindings": "*",
     "buffer-crc32": "~0.2.1",
-    "async": "~0.2.9"
+    "async": "~0.2.9",
+    "underscore": "~1.5.1"
   },
   "devDependencies": {
     "chai": "1.7.x",
