--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "underscore": "~1.5.1"
   },
   "devDependencies": {
+    "jshint": "~2.1.10",
     "chai": "1.7.x",
     "mocha": "1.12.x",
     "coveralls": "~2.2.0",
@@ -30,8 +31,7 @@
     "bin/zopflipng"
   ],
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha test",
-    "test-coveralls": "NODE_ENV=test YOURPACKAGE_COVERAGE=1 ./node_modules/.bin/mocha --require blanket --reporter mocha-lcov-reporter | ./node_modules/coveralls/bin/coveralls.js",
+    "test": "make test",
     "blanket": {
       "pattern": "lib",
       "data-cover-never": "node_modules"
