--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "bin/zopflipng"
   ],
   "scripts": {
-    "install": "./node_modules/.bin/node-pre-gyp install --fallback-to-build --build-from-source",
+    "install": "git submodule update --init && ./node_modules/.bin/node-pre-gyp install --fallback-to-build --build-from-source",
     "test": "make test"
   },
   "config": {
