--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "author": "Pierre Inglebert",
+  "author": "Pierre Inglebert <pierre.inglebert@gmail.com>",
   "name": "node-zopfli",
-  "description": "Compress files with zopfli algorithm",
+  "description": "Bindings for Zopfli compressing lib. Compress gzip files 5% better than gzip.",
+  "contributors": [
+    "duralog <funisher@gmail.com>"
+  ],
   "keywords": [
     "zopfli",
     "zlib",
-    "compress"
+    "compress",
+    "gzip",
+    "deflate"
   ],
-  "version": "1.1.2",
+  "version": "1.1.3",
   "homepage": "https://github.com/pierreinglebert/node-zopfli",
   "repository": {
     "type": "git",
@@ -26,7 +31,7 @@
   "dependencies": {
     "commander": "~2.2.0",
     "buffer-crc32": "~0.2.1",
-    "async": "~0.7.0",
+    "async": "~0.9.0",
     "lodash": "~2.4.1",
     "nan": "~1.1.0",
     "node-pre-gyp": "~0.5.11"
@@ -34,7 +39,7 @@
   "devDependencies": {
     "jshint": "~2.5.0",
     "chai": "~1.9.0",
-    "mocha": "~1.18.2",
+    "mocha": "~1.19.0",
     "coveralls": "~2.10.0",
     "mocha-lcov-reporter": "0.0.1",
     "blanket": "~1.1.5"
