--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "host": "https://node-zopfli.s3.amazonaws.com"
   },
   "dependencies": {
-    "commander": "~2.2.0",
-    "buffer-crc32": "~0.2.1",
     "async": "~0.9.0",
+    "bluebird": "^2.1.1",
+    "buffer-crc32": "~0.2.1",
+    "commander": "~2.2.0",
     "lodash": "~2.4.1",
     "nan": "~1.2.0",
     "node-pre-gyp": "~0.5.11"
