--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "bin/zopflipng"
   ],
   "scripts": {
-    "install": "node-pre-gyp install --fallback-to-build --build-from-source",
+    "install": "./node_modules/node-pre-gyp/bin/node-pre-gyp install --fallback-to-build --build-from-source",
     "test": "make test"
   },
   "config": {
