--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "gzip",
     "deflate"
   ],
-  "version": "1.2.1",
+  "version": "1.2.5",
   "homepage": "https://github.com/pierreinglebert/node-zopfli",
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "bluebird": "~2.9.1",
     "buffer-crc32": "~0.2.1",
     "commander": "~2.7.0",
+    "defaults": "^1.0.2",
     "nan": "~1.6.0",
     "node-pre-gyp": "~0.6.4"
   },
