--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
+sudo: false
 language: "node_js"
 node_js:
   - "0.10"
   - "0.12"
   - "iojs"
 script: make test-coveralls
+matrix:
+  fast_finish: true
