--- a/.jshintrc
+++ b/.jshintrc
@@ -1,26 +1,17 @@
 {
-    "node": true,
-    "browser": true,
-    "esnext": false,
-    "bitwise": false,
-    "camelcase": false,
-    "curly": false,
-    "eqeqeq": true,
-    "immed": true,
-    "latedef": true,
-    "mocha": true,
-    "newcap": true,
-    "noarg": true,
-    "quotmark": "single",
-    "regexp": true,
-    "undef": true,
-    "unused": "vars",
-    "strict": true,
-    "trailing": true,
-    "smarttabs": false,
-    "globals": {},
-    "predef": [],
-    "indent": 2,
-    "devel": true,
-    "noempty": true
+  "curly": false,
+  "eqeqeq": true,
+  "immed": true,
+  "indent": 2,
+  "latedef": true,
+  "newcap": true,
+  "noarg": true,
+  "nocomma": true,
+  "node": true,
+  "noempty": true,
+  "nonbsp": true,
+  "quotmark": "single",
+  "strict": true,
+  "undef": true,
+  "unused": true
 }
