--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "author": "Pierre Inglebert <pierre.inglebert@gmail.com>",
   "name": "node-zopfli",
+  "author": "Pierre Inglebert <pierre.inglebert@gmail.com>",
   "description": "Bindings for Zopfli compressing lib. Compress gzip files 5% better than gzip.",
+  "version": "1.2.6",
   "contributors": [
     "duralog <funisher@gmail.com>"
   ],
@@ -12,11 +13,13 @@
     "gzip",
     "deflate"
   ],
-  "version": "1.2.6",
   "homepage": "https://github.com/pierreinglebert/node-zopfli",
   "repository": {
     "type": "git",
     "url": "https://github.com/pierreinglebert/node-zopfli.git"
+  },
+  "bugs": {
+    "url": "https://github.com/pierreinglebert/node-zopfli/issues"
   },
   "engines": {
     "node": ">=0.10"
@@ -29,25 +32,25 @@
     "host": "https://node-zopfli.s3.amazonaws.com"
   },
   "dependencies": {
-    "bluebird": "^2.9.14",
-    "commander": "^2.7.1",
+    "bluebird": "^2.9.25",
+    "commander": "^2.8.1",
     "defaults": "^1.0.2",
-    "nan": "^1.7.0",
+    "nan": "^1.8.4",
     "node-pre-gyp": "^0.6.4"
   },
   "devDependencies": {
     "async": "^0.9.0",
-    "chai": "^2.1.2",
+    "chai": "^2.3.0",
     "coveralls": "^2.11.2",
     "istanbul": "^0.3.13",
-    "jshint": "^2.6.3",
-    "mocha": "^2.2.1",
-    "randomstring": "^1.0.3"
+    "jshint": "^2.7.0",
+    "mocha": "^2.2.4",
+    "randomstring": "^1.0.5"
   },
-  "bin": [
-    "bin/zopfli",
-    "bin/zopflipng"
-  ],
+  "bin": {
+    "zopfli": "bin/zopfli",
+    "zopflipng": "bin/zopflipng"
+  },
   "scripts": {
     "install": "node-pre-gyp install --fallback-to-build --build-from-source",
     "test": "make test"
