--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,4 @@ install:
   - ./node_modules/.bin/node-pre-gyp rebuild
 
 script:
-  - make test-coveralls
+  - node make lint && node make test-coveralls
