--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "istanbul": "^0.3.13",
     "jshint": "^2.7.0",
     "mocha": "^2.2.4",
-    "randomstring": "^1.0.5"
+    "randomstring": "^1.0.5",
+    "shelljs": "^0.4.0"
   },
   "bin": {
     "zopfli": "bin/zopfli",
@@ -53,7 +54,7 @@
   },
   "scripts": {
     "install": "node-pre-gyp install --fallback-to-build --build-from-source",
-    "test": "make test"
+    "test": "node make test"
   },
   "main": "lib/zopfli.js",
   "gypfile": true
