--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "chai": "^2.3.0",
     "coveralls": "^2.11.2",
     "istanbul": "^0.3.13",
+    "istanbul-coveralls": "^1.0.2",
     "jshint": "^2.7.0",
     "mocha": "^2.2.4",
     "randomstring": "^1.0.5",
