--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,20 @@ os:
   - linux
   - osx
 
+# don't re-build for tags so that [publish binary] is not re-run
+# https://github.com/travis-ci/travis-ci/issues/1532
+branches:
+  except:
+    - /^v[0-9]/
+
 env:
   matrix:
     - NODE_VERSION="0.10"
     - NODE_VERSION="0.12"
     - NODE_VERSION="iojs"
+  global:
+    - secure: IxORreMUlF3CYU6129/JAQ00ZMR+yxrD8x+nAka8T+qQ8MI3OBkONwYeOXknE0PDgWvD315gPK9KQXSplruEuz8mmxjUJNOzvAikUMF7hVUIl79hSwLDkFZ1MC0rV90dbb7hOlxD1EjqASqTbEJPNarDzIcDxf/G6cubPgnxNbE=
+    - secure: eGf5iU0ixKUhp4z+/o8/6A7lvL33nZFCS510gJzytgh0qpACHSYz+2KzNT+ddYRE2Mobj3WPqxXRq8mtMAlyuXogwQhmnYOBtskSkPUK+u5DhX+s1IQHu7DyGfx+h44jlOX2D3peKL0HOLl+SPDkzAt4Xec/W3VNPHolQDy9Tjg=
 
 matrix:
   fast_finish: true
@@ -31,3 +40,5 @@ script:
 
 after_success:
   - npm run coveralls
+  - COMMIT_MESSAGE=$(git show -s --format=%B $TRAVIS_COMMIT | tr -d '\n')
+  - if [[ ${COMMIT_MESSAGE} =~ "[publish binary]" ]]; then ./node_modules/.bin/node-pre-gyp package publish; fi;
