--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,5 @@ install:
   - ./node_modules/.bin/node-pre-gyp rebuild
 
 script:
-  - make test-coveralls
+  - npm run lint
+  - npm run test-coveralls
