--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "node-zopfli",
-  "author": "Pierre Inglebert <pierre.inglebert@gmail.com>",
   "description": "Bindings for Zopfli compressing lib. Compress gzip files 5% better than gzip.",
   "version": "1.3.3",
+  "author": "Pierre Inglebert <pierre.inglebert@gmail.com>",
   "contributors": [
     "duralog <funisher@gmail.com>",
     "MayhemYDG <stepien.nicolas@gmail.com>",
     "XhmikosR <xhmikosr@gmail.com>"
   ],
+  "license": "MIT",
   "keywords": [
     "zopfli",
     "zlib",
