--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,8 @@ environment:
   matrix:
     - nodejs_version: 0.10
     - nodejs_version: 0.12
-    # - nodejs_version: 1
+    - nodejs_version: 1
+    - nodejs_version: 2
 
 platform:
   - x86
