--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "commander": "^2.8.1",
     "defaults": "^1.0.2",
     "nan": "^2.0.0",
-    "node-pre-gyp": "^0.6.4"
+    "node-pre-gyp": "^0.6.4",
+    "bluebird": "^3.4.6"
   },
   "devDependencies": {
     "async": "^2.0.0",
