--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ env:
     - NODE_VERSION="4"
     - NODE_VERSION="5"
     - NODE_VERSION="6"
+    - NODE_VERSION="7"
     - NODE_VERSION="iojs"
   global:
     - secure: IxORreMUlF3CYU6129/JAQ00ZMR+yxrD8x+nAka8T+qQ8MI3OBkONwYeOXknE0PDgWvD315gPK9KQXSplruEuz8mmxjUJNOzvAikUMF7hVUIl79hSwLDkFZ1MC0rV90dbb7hOlxD1EjqASqTbEJPNarDzIcDxf/G6cubPgnxNbE=
@@ -34,7 +35,9 @@ addons:
     - g++-4.8
 
 before_install:
-  - export CXX=g++-4.8
+  - export CXX=g++
+  - export CC=gcc
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then export CXX=g++-4.8; fi
   - rm -rf ~/.nvm/ && git clone --depth 1 https://github.com/creationix/nvm.git ~/.nvm
   - source ~/.nvm/nvm.sh
   - nvm install $NODE_VERSION
@@ -50,4 +53,4 @@ script:
 after_success:
   - npm run coveralls
   - COMMIT_MESSAGE=$(git show -s --format=%B $TRAVIS_COMMIT | tr -d '\n')
-  - if [[ ${COMMIT_MESSAGE} =~ "[publish binary]" ]]; then ./node_modules/.bin/node-pre-gyp package publish; fi;
+  - if [[ ${COMMIT_MESSAGE} =~ "[publish binary]" && ${TRAVIS_OS_NAME} == "osx" ]]; then ./node_modules/.bin/node-pre-gyp package publish; fi;
