--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,6 +20,8 @@ environment:
       platform: x64
     - nodejs_version: "6"
       platform: x64
+    - nodejs_version: "7"
+      platform: x64
 
 matrix:
   fast_finish: true
@@ -31,13 +33,13 @@ install:
   # Install newer npm
   - npm install -g npm@3
   - ps: $env:path = $env:appdata + "\npm;" + $env:path
-  
+
   # work around an issue with node-gyp v3.3.1 and node 4x
   # package.json has no certificates in it so we're cool
   # https://github.com/nodejs/node-gyp/issues/921
   - ps: npm config set -g cafile=package.json | Write-Host;
   - ps: npm config set -g strict-ssl=false | Write-Host;
-  
+
   # Add local node-pre-gyp dir to path
   - SET PATH=node_modules\.bin;%PATH%
   # Use 64-bit Python if platform is 64-bit
