--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "url": "https://github.com/pierreinglebert/node-zopfli/issues"
   },
   "engines": {
-    "node": ">=6"
+    "node": ">=8"
   },
   "binary": {
     "napi_versions": [
@@ -43,9 +43,11 @@
     "aws-sdk": "^2.442.0",
     "chai": "^4.2.0",
     "coveralls": "^3.0.3",
+    "cross-spawn": "^7.0.1",
     "eslint": "5.16.0",
     "istanbul": "^0.4.4",
     "mocha": "^6.1.4",
+    "npm-run-path-compat": "^2.0.3",
     "prebuild": "^9.0.0",
     "prebuild-ci": "^3.1.0",
     "randomstring": "^1.1.5"
@@ -67,7 +69,7 @@
     "lint": "eslint .",
     "mocha": "mocha test",
     "test-cov": "istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec test",
-    "test": "npm run lint && npm run mocha && prebuild-ci"
+    "test": "npm run lint && npm run mocha && node prebuild-ci"
   },
   "main": "lib/zopfli.js",
   "gypfile": true
