--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,6 +18,10 @@ environment:
     nodejs_arch: "x86"
   - nodejs_version: "12"
     nodejs_arch: "x64"
+  - nodejs_version: "14"
+    nodejs_arch: "x86"
+  - nodejs_version: "14"
+    nodejs_arch: "x64"
 
 matrix:
   fast_finish: true
