--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         node-version: [14.x, 16.x, 18.x, 19.x]
     steps:
@@ -19,6 +20,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+      - uses: actions/setup-python@v4
+        with:
+          node-version: 2.7  # NOTE: legacy Python!!
       - run: npm install --build-from-source
       - run: npm run lint
       - run: run test-cov
