--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - uses: actions/setup-python@v4
         with:
-          node-version: ${{ matrix.python-version }}
+          python-version: ${{ matrix.python-version }}
       - run: npm install --build-from-source
       - run: npm run lint
       - run: run test-cov
